# tahtlang

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/spec/: syntax.md  taht.md
examples/: minimal.tahta  tutorial.tahta
grammar/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
grammar/bindings/c/: tree-sitter-tahta.pc.in
grammar/bindings/go/: binding.go  binding_test.go  go.mod
grammar/bindings/node/: binding.cc
grammar/bindings/python/tree_sitter_tahta/: __init__.py  binding.c
grammar/bindings/rust/: build.rs  lib.rs
grammar/bindings/swift/TreeSitterTahta/: tahta.h
grammar/parser.dylib.dSYM/Contents/Resources/Relocations/aarch64/: parser.dylib.yml
grammar/queries/: highlights.scm
tests/: test_compiler.py  test_grammar_sync.py  test_integration.py  test_lexer.py  test_parser.py  test_validator.py
tools/: csv_to_tahta.py  fix_syntax.py  render_card.py
tools/compiler/: __init__.py  __main__.py  main.py
tools/lsp/: __init__.py  __main__.py  server.py
tools/parser/: __init__.py  ast.py  errors.py  lexer.py  parser.py  validator.py
